🐛 extra whitespace fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 html, body {
   height: 100%;
-  width: auto;
+  /* width: auto; */
 
 }
 body {
